# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "redis-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0"                                   # error handling
bytes = "1.6"                                     # helps manage buffers
clap = { version = "4.5", features = ["derive"] }
hex = "0.4.3"
rand = "0.8.5"
sha1 = "0.10.6"
thiserror = "1.0"                                # error handling
tokio = { version = "1.37", features = ["full"] } # async networking
